# process-fragment-miner

./: .gitignore  AUTHORS  CITATION.cff  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
data/processed/BPIC/: BPIC12.xes.gz.pfm.metrics.txt
notebooks/: 01_mine_fragments.ipynb  02_quality_measurments.ipynb
process_fragment_miner/: README.md  __init__.py  fragment_selector.py  miner.py  scorer.py  scorer_factory.py  subtrace_extractor.py  test.py  utils.py
process_fragment_miner/adapters/: __init__.py  pm4py_adapter.py  word2vec_adapter.py
