[project]
name = "process-fragment-miner"
version = "0.1.0"
description = "Hierachical Process Mining"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "pm4py>=2.7.16",
    "prettyprinttree>=2.0.1",
    "scikit-learn>=1.7.0",
]
